# Contract-Conditions-Extraction-and-Compliance-Checker

./: .gitignore  README.md  Task example v3.xlsx - Sheet1.csv  compliance_checker.py  interface.py  internal_evaluation.py  process_contract.py  pyproject.toml  requirements.txt
