[project]
name = "herculesai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.44.1",
    "pandas>=2.2.2",
    "streamlit>=1.38.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
